// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.vue 1`] = `
<!-- @prettier -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!-- @prettier -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css">
</style>

`;

exports[`without-pragma.vue 1`] = `




<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const    x      = 1;
</script>
<style src="./my-component.css"></style>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<!-- @format -->

<template>
  <div>This will be pre-compiled</div>
</template>
<script>
const x = 1;
</script>
<style src="./my-component.css">
</style>

`;
